# BytePiece

./: .gitignore  CONTRIBUTING.md  INSTALL_BENCHMARKS.ps1  LICENSE  README.md  benchmark_results.json  example_model.json  install_fair_bpe.py  my_model.json  pyproject.toml  test_corpus.txt  test_model.json
benchmarks/: .gitignore  README.md  benchmark_corpus.py  benchmark_fairness.py  benchmark_info_fair.py  benchmark_parity_aware.py  benchmark_realistic_fixed.py  comparative_benchmark.py  debug_tokens.py  debug_variants.py  diagnose_operators.py  downstream_eval.py  downstream_eval_github.py  downstream_eval_v2.py  entropy_tokenizer_complete.py  requirements.txt  run_all.py  run_fair_benchmark.py  test_1000.py  train_advanced_analyzer.py
benchmarks/data/: build_corpus.py  build_large_corpus.py
benchmarks/data/multilingual/test/: arabic.txt  chinese.txt  english.txt  french.txt  german.txt  hindi.txt  italian.txt  manifest.json  (+3 more)
benchmarks/experiments/: 01_language_imbalance.py  01_v2_language_imbalance.py  README.md
benchmarks/results/: benchmark_info_fair_results.json  benchmark_realistic_fast.json  collect_eval_artifacts.json  comparative_results.json  downstream_eval.json  downstream_eval_github.json  downstream_final.json  fair_comparison.json  parity_aware_comparison.json
benchmarks/results/language_balance/: 01_initial_validation.json  01_v2_results.json
benchmarks/results/raw/: summary.txt
benchmarks/scripts/: 1_prepare_datasets.py  2_train_models.py  4_generate_report.py
bytepiece/: __init__.py
bytepiece/algorithms/: __init__.py  bpe.py  bpe_fast.py  bpe_variants.py  entropy_bpe.py  fair_bpe.py  info_fair_bpe.py  test_entropy_model.json  unigram.py
bytepiece/algorithms/entropy/: __init__.py  advanced_analyzer.py  analyzer.py  pretokenizer.py
bytepiece/cli/: __init__.py  __main__.py
bytepiece/core/: __init__.py  code_pretokenizer.py  code_pretokenizer_v2.py  fairness.py  io.py  normalizer.py  tokenizer.py  vocab.py
bytepiece/eval/: __init__.py  bench.py  metrics.py
bytepiece/utils/: __init__.py  hashing.py  logging.py
bytepiece/visualization/: __init__.py  chunk_viewer.py  stats.py
examples/: example_model.json  quickstart.py  sample_corpus.txt
tests/: conftest.py  test_bpe.py  test_code_pretok.py  test_entropy.py  test_generalization.py  test_io.py  test_normalizer.py  test_parity.py  test_pretok.py  test_pretok_decoded.py  test_pretok_integration.py  test_special_tokens.py  test_visualizers.py
tests/property/: test_bpe_properties.py
tests/unit/: test_bpe.py  test_io.py  test_normalizer.py  test_vocab.py
(+11 files in other folders)
